# whoami_game

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
static/: index.html
