[tool.poetry]
name = "whoami_game"
version = "0.1.0"
description = ""
authors = ["vanerpool <vanerpool@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.70.0"
alembic = "^1.7.5"
asyncpg = "^0.25.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
